2006-02-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcDataModel.java: Replaced proc task observers with host
	task observers.

2006-02-18  Phil Muldoon  <pmuldoon@redhat.com?

	* MenuBar.java (MenuBar): Removed preferences item logic
	* observers/ObserverManager.java (initTaskObservers): Removed
	ProgramObserver for U3 release.

	* WindowManager.java (initWindows): Do not load
	ProgramAddWindow.
	* MenuBar.java (menuItemEvent): Do not close 
	ProgramAddWindow on File -> Close

	* ProcViewPage.java: Sort and Filter on new
	Boolean DataColumn.
	* ProcDataModel.java: Check thread parentage in a tree
	using a Boolean DataColumn instead of a -1 ...  +1
	model using DataColumnInt.

2006-02-16  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcDataModel.java : Was removing an iterator before reparenting
	its children... fixed.

2006-02-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcDataModel.java: Added reparent code. few minor spelling
	fixes.

2006-02-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* ObservableLinkedList.java (swap): New function swaps and old
	object for an new one and palces it at the same position.
	* DetailedObserverTreeView.java: Newly added objects are now
	automatically selected.
	Observers are added to their proper position in the list instead
	of at the end of the tree.
	* CustomeObserverWindow.java (swap): New function swaps
	a selected observer for a new one. 
	Added Handling for null selection.
	
2006-02-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskCloneObserver.java: Changed return type of
	getCopy() from TaskObserverRoot to ObserverRoot.
	* observers/TaskSyscallObserver.java: Ditto. 
	* observers/TaskTerminatingObserver.java: Ditto.
	* observers/TaskForkedObserver.java: Ditto.
	* observers/TaskExecObserver.java: Ditto.
	* observers/TaskObserverRoot.java: Removed getCopy().
	* observers/ObserverRoot.java: Moved getCopy up from 
	TaskObserverRoot.
	* observers/ObserverManager.java: Added baseObserver list