@@ -94,12 +94,14 @@ public class WindowManager implements Saveable{
 	public void save(Preferences prefs) {
 		mainWindow.save(Preferences.userRoot().node(prefs.absolutePath() + "/mainWindow"));
 		logWindow.save(Preferences.userRoot().node(prefs.absolutePath() + "/logWindow"));
+		customeObserverWindow.save(Preferences.userRoot().node(prefs.absolutePath() + "/customObserverWindow"));
 		//programAddWindow.save(Preferences.userRoot().node(prefs.absolutePath() + "/programAddWindow"));
 	}
 
 	public void load(Preferences prefs) {
 		mainWindow.load(Preferences.userRoot().node(prefs.absolutePath() + "/mainWindow"));
 		logWindow.load(Preferences.userRoot().node(prefs.absolutePath() + "/logWindow"));
+		customeObserverWindow.load(Preferences.userRoot().node(prefs.absolutePath() + "/customObserverWindow"));
 		//programAddWindow.load(Preferences.userRoot().node(prefs.absolutePath() + "/programAddWindow"));
 	}
 }
